--- a/app/views/cars/new.html.slim
+++ b/app/views/cars/new.html.slim
@@ -1,2 +1,9 @@
-.content
-  = render 'form', title: "Creating Vehicle"
+.row.page-heading
+  .col-md-12
+    h2 New Car
+  ol.breadcrumb
+    = render_breadcrumbs
+
+.row
+	.col-md-12
+	  = render 'form', title: "Creating Vehicle"
