--- a/app/views/alarm_notifications/index.html.slim
+++ b/app/views/alarm_notifications/index.html.slim
@@ -8,30 +8,36 @@
     = form_tag batch_archive_alarm_notifications_path, id: "archive_alarm_notifiations", :method => :put do
       .grid.simple
         .grid-body
-          .table-responsive
-            table.table
-              thead
-                tr
-                  th
-                  th Vehicle
-                  th Alarm triggered
-                  th Triggered at
-                  th Action
-              tbody
-                - @alerts.each do |alert|
+          - if @alerts.present?
+            .table-responsive
+              table.table
+                thead
                   tr
-                    td.small-cell.v-align-middle 
-                      = check_box_tag "alarm_notification_ids[]", alert.id, nil , class: "alarm_notification_checkbox"
-                    td
-                      = link_to alert.try(:car).try(:name), alert.car
-                    td
-                      = link_to alert.try(:alarm).try(:name), alert.alarm
-                    td
-                      = "#{pretty_date(alert.created_at)} at #{pretty_time(alert.created_at)}"
-                    td
-                      = link_to 'Archive', archive_alarm_notification_path(alert), data: { confirm: 'Are you sure want to archieve this alert?' }, method: :put
+                    th
+                    th Vehicle
+                    th Alarm triggered
+                    th Triggered at
+                    th Action
+                tbody
+                  - @alerts.each do |alert|
+                    tr
+                      td.small-cell.v-align-middle 
+                        = check_box_tag "alarm_notification_ids[]", alert.id, nil , class: "alarm_notification_checkbox"
+                      td
+                        = link_to alert.try(:car).try(:name), alert.car
+                      td
+                        = link_to alert.try(:alarm).try(:name), alert.alarm
+                      td
+                        = "#{pretty_date(alert.created_at)} at #{pretty_time(alert.created_at)}"
+                      td
+                        = link_to 'Archive', archive_alarm_notification_path(alert), data: { confirm: 'Are you sure want to archieve this alert?' }, method: :put
 
-          p = paginate @alerts
+            p = paginate @alerts
+          - else
+            .text-center
+              h2 No Alerts at the moment
+              i.fa.fa-ban.fa-4x
+
 
 #quick-access.admin-bar style='bottom: -115px;'
   .admin-bar-inner
