--- a/app/views/car_manufacturers/show.html.slim
+++ b/app/views/car_manufacturers/show.html.slim
@@ -1,11 +1,9 @@
-.row
-  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
-    .page-title
-      = link_to raw("<i class='icon-custom-left'></i>"), car_manufacturers_path
-      h3 Car Manufacturer
-  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-    .pull-right = link_to 'Edit', edit_car_manufacturer_path(@car_manufacturer), class: "btn btn-success"
-         
+.row.page-heading
+  .col-md-12
+    h2 Car
+  ol.breadcrumb
+    = render_breadcrumbs
+
 .row
   .col-md-12
     .grid.simple
