--- a/app/views/cars/edit.html.slim
+++ b/app/views/cars/edit.html.slim
@@ -1,1 +1,9 @@
-= render 'form', title: "Edit Vehicle"
+.row.page-heading
+  .col-md-12
+    h2 Edit Car
+  ol.breadcrumb
+    = render_breadcrumbs
+
+.row
+  .col-md-12
+    = render 'form', title: "Edit Vehicle"
