--- a/app/views/regions/index.html.slim
+++ b/app/views/regions/index.html.slim
@@ -1,17 +1,20 @@
-.content
-  .row
-    .col-md-8.col-lg-8.col-sm-8.col-xs-8 
-      .page-title
-        h3 Regions 
-    .col-md-4.col-lg-4.col-sm-4.col-xs-4 
-      .pull-right = link_to 'Create', new_region_path, class: "btn btn-success"
-
-
-  .row
+.row.page-heading
+  .pull-left
     .col-md-12
-      = form_tag batch_destroy_regions_path, id: "destroy_regions", :method => :put do
-        .grid.simple
-          .grid-body
+      h3 Regions
+    ol.breadcrumb
+      = render_breadcrumbs
+  .pull-right
+    .btn-right
+      = link_to 'New Region', new_region_path, class: "btn btn-primary"
+  .clear-both
+
+.row
+  .col-md-12
+    = form_tag batch_destroy_regions_path, id: "destroy_regions", :method => :put do
+      .grid.simple
+        .grid-body
+          - if @regions.present?
             table.table.no-more-tables
               thead
                 tr
@@ -31,7 +34,12 @@
                       | &nbsp; | &nbsp; 
                       = link_to 'Delete', region, method: :delete, data: { confirm: "Are you sure want to delete this region?" }
 
-          = paginate @regions
+            = paginate @regions
+          - else
+            .text-center
+              h2 No Regions at the moment
+              i.fa.fa-ban.fa-4x              
+              h3 Try to create a region. The button is on top right of this page.
 
 #quick-access.admin-bar style="bottom: -115px;"
   .admin-bar-inner
