--- a/app/views/reporting/users.html.slim
+++ b/app/views/reporting/users.html.slim
@@ -1,7 +1,8 @@
-.row
-  .col-md-8.col-lg-8.col-sm-8.col-xs-8
-    .page-title
-      h3 Reports
+.row.page-heading
+  .col-md-12
+    h2 Reports
+  ol.breadcrumb
+    = render_breadcrumbs
 .row
   .col-md-12
 
