--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,17 +1,17 @@
-.content
-  .row
-    .col-md-12
-      .page-title
-        = link_to raw("<i class='icon-custom-left'></i>"), users_path
-        h3 Edit Employee
-  .row
-    .col-md-12
-      .grid.simple
-        .grid-title
-          h4
-            | Employee 
-            span.semi-bold details
-        .grid-body 
-          .row
-            .col-md-8.col-sm-8.col-xs-8
-              = render 'form'
+.row.page-heading
+  .col-md-12
+    h2 Edit Employee
+  ol.breadcrumb
+    = render_breadcrumbs
+
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title
+        h4
+          | Employee 
+          span.semi-bold details
+      .grid-body 
+        .row
+          .col-md-8.col-sm-8.col-xs-8
+            = render 'form'
