--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -36,6 +36,12 @@ ul
       span.title Reports
 
   - if is_manager?(current_user)
+    li class="#{'active' if current_page?(orders_path)}"
+      a href="#{orders_path}"
+        = fa_icon "dashcube"
+        span.title Order Package
+        span.arrow
+
     li
       a href="javascript:;"
         = fa_icon "th-list"
