Notification feature for driver

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,6 +53,7 @@
  *= require jquery.fileupload-ui
  *= require orders
  *= require ./framework/waitMe.min
+ *= require notifications
  */
 
 .map-tooltip{
