--- a/app/views/layouts/_menu.html.slim
+++ b/app/views/layouts/_menu.html.slim
@@ -35,6 +35,12 @@ ul
       = fa_icon "file-text-o"
       span.title Reports
 
+  li class="#{'active' if current_page?(notifications_path)}"
+    a href="#{notifications_path}"
+      = fa_icon "bell"
+      span.title Notifications
+      span.badge.badge-danger.pull-right = @notifications_count
+
   - if is_manager?(current_user)
     li class="#{'active' if current_page?(orders_path)}"
       a href="#{orders_path}"
