--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,9 +7,9 @@ html
 
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
 
-    script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"
+    / script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
-    = javascript_include_tag 'https://bridge.paymill.com/'
+    / = javascript_include_tag 'https://bridge.paymill.com/'
     javascript:
       var PAYMILL_PUBLIC_KEY = '82116769296bc2931f43f72dae901142';
 
