--- a/app/views/notifications/index.slim
+++ b/app/views/notifications/index.slim
@@ -18,13 +18,13 @@
                       div id="notification-#{notif.id}" class="notification #{notif.is_read ? nil : 'active'}"
                         .row
                           .pull-left  
-                            strong = notif_helper(notif.action)
+                            strong = notif_helper(notif)
                           .pull-right
                             = link_to 'Mark as Read', mark_as_read_notification_path(notif), remote: true, method: :put, id: "js-mark-as-read-link-#{notif.id}" unless notif.is_read
                           .clear-both
                         .row
                           = "#{time_ago_in_words(notif.created_at)} ago."
-                          = accept_decine_helper(notif.action, notif.notificationable_id, notif.notificationable.aasm_state).html_safe
+                          = accept_decine_helper(notif.action, notif.notificationable_id, notif.notificationable.aasm_state).html_safe if notif.action == 'assigned'
                 - else
                   .text-center
                     h2 No Notification at the moment
