--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -8,32 +8,32 @@
     = link_to 'New Orders', new_order_path, class: "btn btn-primary btn-right"
   .clear-both
 
-.row
-  .col-md-12
+.grid.simple
+  .grid-body
     .row
       .col-md-12
-        .grid.simple
-          .grid-body
-            - if @orders.present?
-              .table-responsive
-                table.table
-                  thead
-                    th Customer Name
-                    th Address Package
-                    th Package
-                    th Driver
-                  tbody
-                    - @orders.each do |order|
-                      tr
-                        td = order.customer_name
-                        td = "#{order.latitude} #{order.longitude}"
-                        td = order.package
-                        td = order.users.first.full_name rescue "-"
+        - if @orders.present?
+          .table-responsive
+            table.table
+              thead
+                th Customer Name
+                th Address Package
+                th Package
+                th Status
+                th Action
+              tbody
+                - @orders.each do |order|
+                  tr
+                    td = order.customer_name
+                    td = "#{order.latitude} #{order.longitude}"
+                    td = order.package
+                    td = order.aasm_state.titleize
+                    td = link_to 'Show', order
 
-              = paginate @orders
+          = paginate @orders
 
-            - else
-              .text-center
-                h2 No Orders at the moment.
-                i.fa.fa-ban.fa-4x
-                h3 Try to create an order. The button is on top right of this page.
+        - else
+          .text-center
+            h2 No Orders at the moment.
+            i.fa.fa-ban.fa-4x
+            h3 Try to create an order. The button is on top right of this page.
