--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,7 @@
 
  = require dataTables.bootstrap.min.css
  *= require bootstrap-checkbox
- *=	require datatables.responsive
+ *= require datatables.responsive
  *
  * Framework Css Require.
  *= require ./framework/bootstrap.min
@@ -56,128 +56,136 @@
  *= require notifications
  */
 
+.m-b-10{
+  margin-bottom: 10px;
+}
+
+.none{
+  display: none;
+}
+
 .map-tooltip{
-	height: 100%;
-	margin: 1px;
-	padding: 4px;
-	border-top-color: rgba(0, 0, 0, 0.8);
-	font-size: 10px !important;
-	border-radius: 5px;
-	width: 200px !important;
+  height: 100%;
+  margin: 1px;
+  padding: 4px;
+  border-top-color: rgba(0, 0, 0, 0.8);
+  font-size: 10px !important;
+  border-radius: 5px;
+  width: 200px !important;
 }
 
 .detailed_infowindow {
-	box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
-	font-size: 10px !important;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  font-size: 10px !important;
 }
 
 #calendar {
-	width: 100%;
+  width: 100%;
 }
 
 .input-append{
-	margin-left: 10px;
+  margin-left: 10px;
 }
 
 .h-scroll{
-	overflow-y: scroll;
+  overflow-y: scroll;
 }
 
 .sizeMapFull-icon{
-	background: none !important;
+  background: none !important;
 }
 
 .map, .overview{
-	-webkit-transition: all .3s !important;
-	-o-transition: all .3s !important;
-	transition: all .3s !important;
+  -webkit-transition: all .3s !important;
+  -o-transition: all .3s !important;
+  transition: all .3s !important;
 }
 
 .table>tbody>tr>td.details {
-	/*border-top: none !important;*/
+  /*border-top: none !important;*/
 }
 
 .table>tbody>tr>td.details.address {
-	/*width: 40%;*/
+  /*width: 40%;*/
 }
 
 
 .table>tbody>tr>td.details.address span.staddress {
-	/*opacity: .7;*/
+  /*opacity: .7;*/
 }
 
 .nav.quick-section{
-	margin-top: 0px;
+  margin-top: 0px;
 }
 
 .hide-logo{
-	display: none;
+  display: none;
 }
 
 .query_report_links{
-	margin-top: 15px;
+  margin-top: 15px;
 }
 
 .query_report_search_form form{
-	/*float: right;*/
+  /*float: right;*/
 }
 
 /*.query_report_links {
-	float:right;
+  float:right;
 }
 */
 .query_report_links .btn {
-	margin-right: 5px;
+  margin-right: 5px;
 }
 
 .options{
-	text-align: right;
-	margin : 0; padding: 0;
-	display: inline;
+  text-align: right;
+  margin : 0; padding: 0;
+  display: inline;
 }
 
 .options ul{
-	display: inline-block;
+  display: inline-block;
 }
 
 .options li{
-	list-style: none;
-	display: inline-block;
+  list-style: none;
+  display: inline-block;
 }
 
 .cars_overview table .active_row{
-	border-left: 5px solid red;
+  border-left: 5px solid red;
 }
 
 .grid.simple.overview .title-inline{
-	display: inline-block;
+  display: inline-block;
 }
 
 .lazy_content {
-	opacity: 0;
-	transition: opacity .2s ease-in;
+  opacity: 0;
+  transition: opacity .2s ease-in;
 }
 
 .loaded {
-	opacity: 1;
+  opacity: 1;
 }
 
 .list-group-item:last-child {
-	border-radius: 0px !important;
+  border-radius: 0px !important;
 }
 
 .list-group-item:first-child {
-	border-radius: 0px !important;
+  border-radius: 0px !important;
 }
 
 
 .table.no-bottom{
-	margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .position_row {
-	height: 50px;
-	& > td {
-		vertical-align: middle !important;
-	}
+  height: 50px;
+  & > td {
+    vertical-align: middle !important;
+  }
 }
