--- a/app/views/notifications/index.slim
+++ b/app/views/notifications/index.slim
@@ -25,6 +25,8 @@
                         .row
                           = "#{time_ago_in_words(notif.created_at)} ago."
                           = accept_decline_helper(notif.action, notif.notificationable_id, notif.notificationable.aasm_state, notif.id).html_safe if notif.action == 'assigned'
+
+                  p.pagination = link_to_next_page(@notifications, 'Next Page', :remote => true)
                 - else
                   .text-center
                     h2 No Notification at the moment
