--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -10,8 +10,10 @@
       carIcon: image_path('map-icons/car_icon.png'),
       emptyIcon: image_path('map-icons/empty_icon.png')
 - else
-  div
-    = react_component "Driver",
-      car: current_user.car,
-      device: current_user.car.device,
-      user: current_user
+  #map style="height: 600px;"
+  = react_component "Driver",
+    car: current_user.car,
+    device: current_user.car.try(:device),
+    user: current_user,
+    last_location: current_user.car.locations.last,
+    orders: Order.assigned_to(current_user.id, params[:filter])
