--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,6 +74,9 @@
   width: 200px !important;
 }
 
+.cursor-pointer{
+  cursor: pointer;
+}
 .detailed_infowindow {
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   font-size: 10px !important;
