--- a/app/views/work_schedules/new.html.slim
+++ b/app/views/work_schedules/new.html.slim
@@ -20,4 +20,4 @@
 
             #calendar
             br/
-            input#submit_calendar type="button" value="Submit" class: "btn btn-primary"
+            input#submit_calendar type="button" value="Submit" class="btn btn-primary"
