--- a/app/views/alarms/index.html.slim
+++ b/app/views/alarms/index.html.slim
@@ -26,19 +26,10 @@
                         th Number of Rules
                         th Number of Cars
                         th
-                    tbody
-                      - @alarms.each do |alarm|
-                        tr
-                          td.small-cell.v-align-middle = check_box_tag "alarm_ids[]", alarm.id, nil , class: "alarm_checkbox"
-                          td = link_to alarm.name, alarm
-                          td = alarm.try(:rules).try(:count)
-                          td = alarm.try(:cars).try(:count)
-                          td
-                            = link_to 'Edit', edit_alarm_path(alarm)
-                            | &nbsp; | &nbsp; 
-                            = link_to 'Delete', alarm, method: :delete, data: { confirm: "Are you sure want to delete this alaram?" }
+                    tbody#alarms-tbody
+                      = render partial: '/alarms/partials/alarms_rows', locals: { alarms: @alarms }
 
-                = paginate @alarms
+                p.pagination = link_to_next_page(@alarms, 'Load more data', :remote => true)
               - else
                 .text-center
                   h2 No Alarms at the moment
