--- a/app/views/cars/index.html.slim
+++ b/app/views/cars/index.html.slim
@@ -32,25 +32,10 @@
                         = content_tag :th, sort_link(@q, :car_model)
                         = content_tag :th, sort_link(@q, :car_type)
                         th
-                    tbody
-                      - @cars.each do |car|
-                        tr
-                          td.small-cell.v-align-middle
-                            = check_box_tag "car_ids[]", car.id, nil , class: "car_checkbox"
-                          td
-                            = link_to car.name, car
-                          td
-                            = car.numberplate
-                          td
-                            = car.try(:car_model).try(:name)
-                          td
-                            = car.try(:car_type).try(:name)
-                          td
-                            = link_to 'Edit', edit_car_path(car)
-                            | &nbsp; | &nbsp; 
-                            = link_to 'Delete', car, method: :delete, data: { confirm: "Are you sure want to delete this car?" }
+                    tbody#cars-tbody
+                      = render partial: '/cars/partials/cars_row', locals: { cars: @cars }
 
-                p = paginate @cars
+                p.pagination = link_to_next_page(@cars, 'Load more data', :remote => true)
               - else
                 .text-center
                   h2 No Cars at the moment.
