--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -28,16 +28,9 @@
                   th Status
                   th Action
                 tbody#order-body
-                  - @orders.each do |order|
-                    tr
-                      td = order.customer_name
-                      td = "#{order.latitude} #{order.longitude}"
-                      td = order.package
-                      td = state_helper(order)
-                      td = order_action(order)
+                  = render partial: '/orders/partials/orders_row', locals: { orders: @orders }
 
-
-            = paginate @orders
+            p.pagination = link_to_next_page(@orders, 'Load more data', :remote => true)
 
           - else
             .text-center
